fixed font, hover for contacts and horizontal scroll

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -13,5 +13,12 @@
     @extend %text-add;
     color: inherit;
     text-decoration: none;
+    transition: all $transition;
+
+    &:hover {
+      opacity: 0.6;
+      text-decoration: underline;
+      font-weight: 500;
+    }
   }
 }
