--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -80,6 +80,7 @@
   &__mark {
     display: none;
     position: relative;
+    font-family: $font-main;
     font-weight: 700;
     font-size: 1.4rem;
     line-height: 1.4rem;
