--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -9,6 +9,7 @@
 
   &:hover {
     opacity: 0.7;
+    transform: scale(1.1);
   }
 
   &--menu {
