--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -5,6 +5,11 @@
   line-height: 3rem;
   color: $color-text-main;
   text-decoration: none;
+  
+  &:hover {
+    opacity: 0.7;
+    transform: scale(1.1);
+  }
 
   @include onTablet {
     font-size: 3.6rem;
