--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -79,6 +79,7 @@
     &:hover {
       opacity: 0.7;
       text-decoration: underline;
+      font-weight: 500;
     }
 
     @include onDesktop {
