--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,6 +3,7 @@
   font-style: normal;
   color: $color-text-main;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 
   &__body {
     margin: 0;
